--- a/SuperstorePractice.ipynb
+++ b/SuperstorePractice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,9 +234,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Order ID\n",
+       "CA-2017-100111    15\n",
+       "CA-2016-165330    12\n",
+       "CA-2017-157987    12\n",
+       "US-2016-108504    11\n",
+       "US-2015-126977    10\n",
+       "                  ..\n",
+       "CA-2017-103506     1\n",
+       "CA-2016-132479     1\n",
+       "CA-2017-160724     1\n",
+       "CA-2017-156412     1\n",
+       "CA-2017-119914     1\n",
+       "Name: count, Length: 5009, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_concat = pd.concat([data, data_returns])\n",
     "data_concat['Order ID'].value_counts()\n"
@@ -244,22 +267,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/_c/7ddzw5qx2ts_qln_wcy502340000gn/T/ipykernel_15253/2582232730.py:18: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  data_filter['Order Date'] = pd.to_datetime(data_filter['Order Date'])\n",
+      "/var/folders/_c/7ddzw5qx2ts_qln_wcy502340000gn/T/ipykernel_15253/2582232730.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_filter['Order Date'] = pd.to_datetime(data_filter['Order Date'])\n",
+      "/var/folders/_c/7ddzw5qx2ts_qln_wcy502340000gn/T/ipykernel_15253/2582232730.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  data_filter['Ship Date'] = pd.to_datetime(data_filter['Ship Date'])\n",
+      "/var/folders/_c/7ddzw5qx2ts_qln_wcy502340000gn/T/ipykernel_15253/2582232730.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_filter['Ship Date'] = pd.to_datetime(data_filter['Ship Date'])\n",
+      "/var/folders/_c/7ddzw5qx2ts_qln_wcy502340000gn/T/ipykernel_15253/2582232730.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_filter['Ship Delay'] = data_filter['Ship Date'] - data_filter['Order Date']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(800, 22)"
+       "count                          798\n",
+       "mean     3 days 20:03:36.541353383\n",
+       "std      1 days 21:41:51.231903483\n",
+       "min                0 days 00:00:00\n",
+       "25%                3 days 00:00:00\n",
+       "50%                4 days 00:00:00\n",
+       "75%                5 days 00:00:00\n",
+       "max                7 days 00:00:00\n",
+       "Name: Ship Delay, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'''What is the avg difference between ship date and order date on items that were returned? '''\n",
+    "from datetime import datetime\n",
     "\n",
     "#Inner join both datasets on Order ID  \n",
     "#Filter for orders that were returned\n",
@@ -267,22 +327,236 @@
     "data_joined = pd.merge(data, data_returns, how='inner', on='Order ID')\n",
     "\n",
     "#data_joined.dtypes\n",
+    "data_joined.head()\n",
     "\n",
-    "data_filter = data_joined[data_joined['Returned'] == 'No']\n",
+    "data_filter = data_joined[data_joined['Returned'] == 'Yes']\n",
     "\n",
     "data_filter.shape\n",
     "\n",
+    "#Now convert date to datetime\n",
+    "#data_filter.dtypes\n",
+    "data_filter['Order Date'] = pd.to_datetime(data_filter['Order Date'])\n",
+    "data_filter['Ship Date'] = pd.to_datetime(data_filter['Ship Date'])\n",
     "\n",
+    "#data_filter.dtypes\n",
     "\n",
+    "#Now we need the difference between order and ship \n",
+    "\n",
+    "data_filter['Ship Delay'] = data_filter['Ship Date'] - data_filter['Order Date']\n",
+    "#data_filter.head()\n",
+    "\n",
+    "data_filter['Ship Delay'].describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Region\n",
+       "West       490\n",
+       "East       147\n",
+       "Central     92\n",
+       "South       69\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Which region had the most orders returned?\"\"\"\n",
+    "#Inner join on returned\n",
+    "#filter for Yes\n",
+    "#\n",
+    "\n",
+    "data_region_filter = pd.merge(data, data_returns, how='inner', on=\"Order ID\")\n",
+    "#data_region_filter.head()\n",
+    "\n",
+    "data_region_filter_returned = data_region_filter[data_region_filter['Returned'] == \"Yes\"]\n",
+    "data_region_filter_returned.shape\n",
+    "\n",
+    "data_region_filter_returned['Region'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "New York City    915\n",
+       "Los Angeles      747\n",
+       "Philadelphia     537\n",
+       "San Francisco    510\n",
+       "Seattle          428\n",
+       "Houston          377\n",
+       "Chicago          314\n",
+       "Columbus         222\n",
+       "San Diego        170\n",
+       "Springfield      163\n",
+       "Dallas           157\n",
+       "Jacksonville     125\n",
+       "Detroit          115\n",
+       "Newark            95\n",
+       "Richmond          90\n",
+       "Jackson           82\n",
+       "Columbia          81\n",
+       "Aurora            68\n",
+       "Phoenix           63\n",
+       "Long Beach        61\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Rank the cities in descending order of the number of orders made'''\n",
+    "\n",
+    "data.head()\n",
+    "\n",
+    "data['City'].value_counts()\n",
+    "\n",
+    "city_count = data['City'].value_counts()\n",
+    "city_count.head(20)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndexingError",
+     "evalue": "Too many indexers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexingError\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[84], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m data_grouped \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCity\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mShip Date\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mtransform(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnunique\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m data_grouped\n\u001b[0;32m---> 14\u001b[0m cities_3_days_in_a_row \u001b[38;5;241m=\u001b[39m \u001b[43mdata_grouped\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdata_grouped\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCity\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39munique()\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexing.py:1184\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1182\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_scalar_access(key):\n\u001b[1;32m   1183\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_get_value(\u001b[38;5;241m*\u001b[39mkey, takeable\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_takeable)\n\u001b[0;32m-> 1184\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_getitem_tuple\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1185\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1186\u001b[0m     \u001b[38;5;66;03m# we by definition only have the 0th axis\u001b[39;00m\n\u001b[1;32m   1187\u001b[0m     axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexing.py:1371\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_tuple\u001b[0;34m(self, tup)\u001b[0m\n\u001b[1;32m   1368\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_lowerdim(tup)\n\u001b[1;32m   1370\u001b[0m \u001b[38;5;66;03m# no multi-index, so validate all of the indexers\u001b[39;00m\n\u001b[0;32m-> 1371\u001b[0m tup \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_tuple_indexer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtup\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1373\u001b[0m \u001b[38;5;66;03m# ugly hack for GH #836\u001b[39;00m\n\u001b[1;32m   1374\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_multi_take_opportunity(tup):\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexing.py:962\u001b[0m, in \u001b[0;36m_LocationIndexer._validate_tuple_indexer\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    957\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[1;32m    958\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_validate_tuple_indexer\u001b[39m(\u001b[38;5;28mself\u001b[39m, key: \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mtuple\u001b[39m:\n\u001b[1;32m    959\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    960\u001b[0m \u001b[38;5;124;03m    Check the key for valid keys across my indexer.\u001b[39;00m\n\u001b[1;32m    961\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 962\u001b[0m     key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_key_length\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    963\u001b[0m     key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_expand_ellipsis(key)\n\u001b[1;32m    964\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(key):\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexing.py:1001\u001b[0m, in \u001b[0;36m_LocationIndexer._validate_key_length\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    999\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m IndexingError(_one_ellipsis_message)\n\u001b[1;32m   1000\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_key_length(key)\n\u001b[0;32m-> 1001\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m IndexingError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mToo many indexers\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1002\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m key\n",
+      "\u001b[0;31mIndexingError\u001b[0m: Too many indexers"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Find a list of cities that shipped orders 3 days in a row. E.g., 3/1/2016, 3/2/2016, 3/3/2017\"\"\"\n",
+    "\n",
+    "#convert to date time\n",
+    "data.head()\n",
+    "\n",
+    "data['Ship Date'] = pd.to_datetime(data['Ship Date'])\n",
+    "data.dtypes\n",
+    "\n",
+    "#Group by cities and ship date\n",
+    "\n",
+    "data_grouped = data.groupby('City')['Ship Date'].transform('nunique')\n",
+    "data_grouped\n",
+    "\n",
+    "cities_3_days_in_a_row = data_grouped.loc[data_grouped >= 3, 'City'].unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Region\n",
+       "West     108418.4489\n",
+       "East      91522.7800\n",
+       "South     46749.4303\n",
+       "Name: Profit, dtype: float64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"What are the top 3 states by profits?\"\"\"\n",
+    "\n",
+    "#group states by profit\n",
+    "data.head()\n",
+    "data_profits = data.groupby('Region')['Profit'].sum()\n",
+    "data_profits.sort_values(ascending= False).head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"What is the average number of unique Customer Names by Category?\"\"\"\n",
+    "\n",
+    "data_unique_names = data.groupby(\"Category\")['Customer Name'].nunique().mean()\n",
+    "data_unique_names\n",
+    "data['Category'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[102], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m data_worst_state \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mState\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mProfit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m      4\u001b[0m data_worst_state\u001b[38;5;241m.\u001b[39msort_values()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "data_worst_state = data.groupby('State')['Profit'].sum()\n",
+    "data_worst_state.sort_values()\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "data_worst_state.plot(kind='bar', color='red')\n",
+    "plt.title('Worst States by Profit')\n",
+    "plt.xlabel('State')\n",
+    "plt.ylabel('Total Profit')\n",
+    "plt.xticks(rotation=45)  # Rotate x-axis labels for better readability\n",
+    "plt.grid(axis='y')  # Add gridlines for better visualization\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
